--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href = "recipes/mango-lemonade.html">Mango Lemonade</a>
+        <ul>
+        <li><a href = "recipes/mango-lemonade.html">Mango Lemonade</a></li>
+        <li><a href="/recipes/peanutty-ice-cream-pie.html">Peanutty Ice Cream Pie</a></li>
+        </ul>
     </body>
 </html>
