--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
         <li><a href = "recipes/mango-lemonade.html">Mango Lemonade</a></li>
         <li><a href="/recipes/peanutty-ice-cream-pie.html">Peanutty Ice Cream Pie</a></li>
+        <li><a href="/recipes/watermelon-lemonade-slush.html">Watermelon Lemonade Slush</a></li>
         </ul>
     </body>
 </html>
